Day 3 restore: services + embeddings + semantic search refactor

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ frontend/.env.local
 backend/bin/
 backend/obj/
 docmind-clean.sln
+backend/appsettings.Development.json
 
 # Local uploads / temp files
 backend/uploads/
